# word4

./: word4.cabal
Data/: Word4.hs
