name:                word4
version:             0.1.0.0
synopsis:            Provides Word4, half a Word8
description:         Provides Word4, half a Word8.
license:             BSD3
license-file:        LICENSE
author:              Brian McKenna
maintainer:          brian@brianmckenna.org
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.Word4
  other-extensions:    GeneralizedNewtypeDeriving
  build-depends:       base >=4.9 && <4.11
                     , array >=0.5 && <0.6
  default-language:    Haskell2010
